chore: add ThemeProvider with theme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "strict": true,
     "paths": {
       "*": ["src/*"],
-      "components/*": ["components/*"]
+      "components/*": ["components/*"],
+      "utils/*": ["utils/*"],
+      "theme/*": ["theme/*"]
     }
   },
   "include": ["./src/**/*", "**/*.ts", "**/*.tsx"],
