--- a/package.json
+++ b/package.json
@@ -15,47 +15,65 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
-    "test:log": "jest --no-coverage >& ./logs/jest.log"
+    "test:log": "jest --no-coverage >& ./logs/jest.log",
+    "publish:dev": "expo publish --release-channel dev",
+    "publish:staging": "expo publish --release-channel staging",
+    "publish:prod": "expo publish --release-channel prod",
+    "build:android:dev": "expo build:android --release-channel dev",
+    "build:android:staging": "expo build:android --release-channel staging",
+    "build:android:prod": "expo build:android --release-channel prod",
+    "url:apk": "expo url:apk"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
+    "expo-localization": "~9.1.0",
     "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "i18n-js": "^3.8.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-web": "~0.13.12",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.14.13",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "~7.12.13",
+    "@types/i18n-js": "^3.8.0",
     "@types/jest": "^26.0.20",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@types/react": "~17.0.1",
+    "@types/react-dom": "~17.0.0",
+    "@types/react-native": "~0.63.48",
     "@types/react-test-renderer": "^17.0.0",
-    "@types/styled-components-react-native": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
+    "@types/styled-components-react-native": "^5.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "7.2.0",
+    "eslint": "7.19.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "4.0.0",
-    "husky": "^4.3.8",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "^5.0.9",
     "jest": "^26.6.3",
-    "jest-expo": "^40.0.1",
-    "lint-staged": "^10.5.3",
+    "jest-expo": "^40.0.2",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "~4.0.0"
+    "ts-jest": "^26.5.0",
+    "typescript": "~4.1.3"
   },
   "private": true,
   "husky": {
