chore: upgrade Expo SDK to 41 and update all packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
     }
   },
   "include": ["./src/**/*", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "*.json", "**/*.json"]
+  "exclude": ["node_modules", "*.json", "**/*.json"],
+  "extends": "expo/tsconfig.base"
 }
