--- a/package.json
+++ b/package.json
@@ -25,55 +25,55 @@
     "url:apk": "expo url:apk"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.9.2",
-    "@react-navigation/stack": "^5.14.2",
-    "expo": "~40.0.0",
-    "expo-app-loading": "^1.0.1",
-    "expo-font": "~8.4.0",
-    "expo-localization": "~9.1.0",
-    "expo-status-bar": "~1.0.3",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
+    "expo": "^41.0.0",
+    "expo-app-loading": "^1.0.3",
+    "expo-font": "~9.1.0",
+    "expo-localization": "~10.1.0",
+    "expo-status-bar": "~1.0.4",
     "i18n-js": "^3.8.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.14.13",
-    "styled-components": "^5.2.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-web": "~0.15.7",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@babel/core": "~7.12.13",
+    "@babel/core": "~7.13.15",
     "@types/i18n-js": "^3.8.0",
-    "@types/jest": "^26.0.20",
-    "@types/react": "~17.0.1",
-    "@types/react-dom": "~17.0.0",
-    "@types/react-native": "~0.63.48",
-    "@types/react-test-renderer": "^17.0.0",
+    "@types/jest": "^26.0.22",
+    "@types/react": "~17.0.3",
+    "@types/react-dom": "~17.0.3",
+    "@types/react-native": "~0.64.4",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "7.19.0",
+    "eslint": "7.24.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "^5.0.9",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "jest-expo": "^40.0.2",
+    "jest-expo": "^41.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.1",
-    "ts-jest": "^26.5.0",
-    "typescript": "~4.1.3"
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^26.5.5",
+    "typescript": "~4.2.4"
   },
   "private": true,
   "husky": {
