--- a/package.json
+++ b/package.json
@@ -28,29 +28,29 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
-    "expo": "^42.0.0",
-    "expo-app-loading": "^1.1.2",
-    "expo-font": "~9.2.1",
-    "expo-localization": "~10.2.0",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^46.0.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-font": "~10.2.0",
+    "expo-localization": "~13.1.0",
+    "expo-status-bar": "~1.4.0",
     "i18n-js": "^3.8.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.17.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.14.6",
+    "@babel/core": "^7.18.6",
     "@types/i18n-js": "^3.8.1",
     "@types/jest": "^26.0.23",
-    "@types/react": "~17.0.13",
-    "@types/react-dom": "~17.0.8",
-    "@types/react-native": "~0.64.10",
+    "@types/react": "~18.0.0",
+    "@types/react-dom": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
@@ -67,13 +67,13 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "^7.0.0",
-    "jest": "^27.0.6",
-    "jest-expo": "^42.0.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^46.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.3",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true,
   "husky": {
