--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "test:log": "jest --no-coverage >& ./logs/jest.log",
+    "test:clear": "jest --clearCache",
     "publish:dev": "expo publish --release-channel dev",
     "publish:staging": "expo publish --release-channel staging",
     "publish:prod": "expo publish --release-channel prod",
@@ -25,55 +26,55 @@
     "url:apk": "expo url:apk"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "expo": "^46.0.0",
-    "expo-app-loading": "~2.1.0",
-    "expo-font": "~10.2.0",
-    "expo-localization": "~13.1.0",
-    "expo-status-bar": "~1.4.0",
-    "i18n-js": "^3.8.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.0"
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/stack": "^6.3.7",
+    "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
+    "expo-localization": "~14.0.0",
+    "expo-status-bar": "~1.4.2",
+    "i18n-js": "^4.2.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.10",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.19.3",
     "@types/i18n-js": "^3.8.1",
-    "@types/jest": "^26.0.23",
-    "@types/react": "~18.0.0",
-    "@types/react-dom": "~18.0.0",
-    "@types/react-native": "~0.69.1",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components-react-native": "^5.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@types/jest": "^29.2.3",
+    "@types/react": "~18.0.24",
+    "@types/react-dom": "~18.0.8",
+    "@types/react-native": "~0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components-react-native": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "7.30.0",
-    "eslint-config-airbnb": "18.2.1",
+    "eslint": "8.28.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "^7.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.2",
     "jest": "^26.6.3",
-    "jest-expo": "^46.0.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.2",
-    "react-test-renderer": "^17.0.2",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.6.3"
+    "jest-expo": "^47.0.1",
+    "lint-staged": "^13.0.4",
+    "prettier": "^2.8.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
   },
   "private": true,
   "husky": {
